--- a/README.org
+++ b/README.org
@@ -3,7 +3,7 @@
 ** [[file:chapters/installation.org][Install FreeBSD]]
 ** [[file:chapters/package_management.org][Package management]]
 ** [[file:chapters/install-gpu-drivers.org][Install GPU drivers]]
-** Make boot faster
+** [[file:chapters/make-boot-faster.org][Make boot faster]]
 ** =ZFS= - Take a base snapshot before installing anywhere else
 ** Install =DE (Desktop Environment)= or =WM (Window Manager)=
 *** Install =X=
