--- a/README.org
+++ b/README.org
@@ -8,3 +8,7 @@
 ** Install =DE (Desktop Environment)= or =WM (Window Manager)=
 *** Install =X=
 *** Install =Hyprland=
+** ZFS dive deep
+*** ZFS overview
+*** ZFS snapshot feature
+*** ZFS compress feature
