--- a/README.org
+++ b/README.org
@@ -12,8 +12,8 @@
 
 ** [[file:chapters/custom-kernel.org][Custom kernel]]
 ** Install =DE (Desktop Environment)= or =WM (Window Manager)=
-*** Install =X=
-*** Install =Hyprland=
+*** [[file:chapters/install-x.org][Install X]] 
+*** Install Hyprland
 ** ZFS dive deep
 *** [[file:chapters/zfs-overview.org][ZFS overview]]
 *** [[file:chapters/zfs-snapshot-feature.org][ZFS snapshot feature]]
