--- a/README.org
+++ b/README.org
@@ -1,6 +1,7 @@
 * My =FreeBSD= handbook
 
 ** [[file:chapters/installation.org][Install FreeBSD]]
+** [[file:chapters/wifi.org][WIFI]]
 ** [[file:chapters/package_management.org][Package management]]
 ** [[file:chapters/install-gpu-drivers.org][Install GPU drivers]]
 ** [[file:chapters/make-boot-faster.org][Make boot faster]]
