--- a/README.org
+++ b/README.org
@@ -21,7 +21,13 @@
 *** [[file:chapters/zfs-snapshot-feature.org][ZFS snapshot feature]]
 *** [[file:chapters/zfs-compress-feature.org][ZFS compress feature]]
 ** [[file:chapters/pf.org][Firewall - PF (Packets Filter)]]
-** [[file:chapters/system_configuration.org][System Configuration]]
+** [[file:chapters/system_configuration.org][System configuration]]
 *** [[file:chapters/virtual_consoles.org][Virtual consoles]]
 *** [[file:chapters/manage_service.org][Managing services]]
 *** [[file:chapters/list_hardware_info.org][List hardare info]]
+*** [[file:chapters/about_cleaning_cache.org][About cleaning cache]]
+** Software installation
+*** [[file:chapters/neovim.org][Neovim]]
+*** [[file:chapters/emacs.org][Emacs]]
+*** [[file:chapters/google_cloud_sdk.org][Google cloud SDK]]
+*** [[file:chapters/lf.org][Lf]]
