[ master ] - Move 'Qute Browser' to 'Software' chapter.

--- a/README.org
+++ b/README.org
@@ -30,5 +30,6 @@
 ** Software installation
 *** [[file:chapters/neovim.org][Neovim]]
 *** [[file:chapters/emacs.org][Emacs]]
+*** [[file:chapters/qutebrowser.org][Qutebrowser]]
 *** [[file:chapters/google_cloud_sdk.org][Google cloud SDK]]
 *** [[file:chapters/lf.org][Lf]]
