--- a/README.org
+++ b/README.org
@@ -34,3 +34,4 @@
 *** [[file:chapters/qutebrowser.org][Qutebrowser]]
 *** [[file:chapters/google_cloud_sdk.org][Google cloud SDK]]
 *** [[file:chapters/lf.org][Lf]]
+*** [[file:chapters/bhyve.org][Bhyve virtualization]]
