--- a/README.org
+++ b/README.org
@@ -35,5 +35,7 @@
 *** [[file:chapters/google_cloud_sdk.org][Google cloud SDK]]
 *** [[file:chapters/lf.org][Lf]]
 *** [[file:chapters/bhyve.org][Bhyve virtualization]]
+** Gaming
+*** [[file:chapters/steam.org][Steam]]
 ** Development
 *** [[file:chapters/c-cpp.org][C/C++]]
