[ master ] - Added 'Ethernet' chapter and updated 'WIFI' chapter.

--- a/README.org
+++ b/README.org
@@ -1,6 +1,7 @@
 * My =FreeBSD= handbook
 
 ** [[file:chapters/installation.org][Install FreeBSD]]
+** [[file:chapters/ethernet.org][Ethernet]]
 ** [[file:chapters/wifi.org][WIFI]]
 ** [[file:chapters/package_management.org][Package management]]
 ** [[file:chapters/install-basic-tools-and-setup.org][Install basic tools and setup]]
