--- a/README.org
+++ b/README.org
@@ -35,9 +35,11 @@
 *** [[file:chapters/emacs.org][Emacs]]
 *** [[file:chapters/mpv.org][mpv]]
 *** [[file:chapters/qutebrowser.org][Qutebrowser]]
+*** Chromium
 *** [[file:chapters/google_cloud_sdk.org][Google cloud SDK]]
 *** [[file:chapters/lf.org][Lf]]
 *** [[file:chapters/bhyve.org][Bhyve virtualization]]
+** Ports collection
 ** Gaming
 *** [[file:chapters/steam.org][Steam]]
 ** Development
