--- a/README.org
+++ b/README.org
@@ -40,6 +40,8 @@
 *** [[file:chapters/google_cloud_sdk.org][Google cloud SDK]]
 *** [[file:chapters/lf.org][Lf]]
 *** [[file:chapters/bhyve.org][Bhyve virtualization]]
+**** Install Arch linux guest
+**** Install OpenBSD guest
 ** [[file:chapters/ports.org][Ports collection]]
 ** Gaming
 *** [[file:chapters/steam.org][Steam]]
