--- a/README.org
+++ b/README.org
@@ -41,7 +41,7 @@
 *** [[file:chapters/lf.org][Lf]]
 *** [[file:chapters/bhyve.org][Bhyve virtualization]]
 **** [[file:chapters/install-arch-linux-guest.org][Install Arch linux guest]]
-**** Install OpenBSD guest
+**** [[file:chapters/install-openbsd-guest.org][Install OpenBSD guest]]
 ** [[file:chapters/ports.org][Ports collection]]
 ** Gaming
 *** [[file:chapters/steam.org][Steam]]
