[ master ] - Added 'wifibox to improve WIFI speed' chapter.

--- a/README.org
+++ b/README.org
@@ -43,6 +43,7 @@
 **** [[file:chapters/install-arch-linux-guest.org][Install Arch linux guest]]
 **** [[file:chapters/install-openbsd-guest.org][Install OpenBSD guest]]
 **** [[file:chapters/it-company-network-topo-simulation.org][IT company network topology simulation]]
+**** [[file:chapters/wifibox-to-improve-wifi-speed.org][wifibox to improve WIFI speed]]
 ** [[file:chapters/ports.org][Ports collection]]
 ** Gaming
 *** [[file:chapters/steam.org][Steam]]
