[ master ] - Updated 'How to use gpart to partition disk' chapter.

--- a/README.org
+++ b/README.org
@@ -54,3 +54,4 @@
 ** How to
 *** [[file:chapters/how-to-show-cpu-info.org][How to show CPU info]]
 *** [[file:chapters/how-to-fix-broken-rc-config.org][How to fix broken /etc/rc.conf]]
+*** [[file:chapters/how-to-use-gpart.org][How to use gpart to partition disk]]
