[ master ] - Updated 'install-hyprland.org' chapter.

--- a/README.org
+++ b/README.org
@@ -26,7 +26,7 @@
 ** [[file:chapters/system_configuration.org][System configuration]]
 *** [[file:chapters/virtual_consoles.org][Virtual consoles]]
 *** [[file:chapters/manage_service.org][Managing services]]
-*** [[file:chapters/list_hardware_info.org][List hardare info]]
+*** [[file:chapters/list_hardware_info.org][List harware info]]
 *** [[file:chapters/power_saving_control.org][Power saving control]]
 *** [[file:chapters/about_cleaning_cache.org][About cleaning cache]]
 ** [[file:chapters/bootloader.org][Bootloader]]
