[ master ] - Added 'Hare' chapter.

--- a/README.org
+++ b/README.org
@@ -50,6 +50,7 @@
 *** [[file:chapters/steam.org][Steam]]
 ** Development
 *** [[file:chapters/c-cpp.org][C/C++]]
+*** [[file:chapters/hare.org][Hare]]
 *** [[file:chapters/socket-communication.org][Socket (inter-process) communication]]
 ** How to
 *** [[file:chapters/how-to-show-cpu-info.org][How to show CPU info]]
