--- a/README.org
+++ b/README.org
@@ -39,6 +39,7 @@
 *** [[file:chapters/ungoogled-chromium.org][Ungoogled-Chromium]]
 *** [[file:chapters/google_cloud_sdk.org][Google cloud SDK]]
 *** [[file:chapters/lf.org][Lf]]
+*** [[file:chapters/discord.org][Discord]]
 *** [[file:chapters/brightness-control.org][Brightness control]]
 *** [[file:chapters/bhyve.org][Bhyve virtualization]]
 **** [[file:chapters/install-arch-linux-guest.org][Install Arch linux guest]]
