--- a/README.org
+++ b/README.org
@@ -28,7 +28,7 @@
 *** [[file:chapters/virtual_consoles.org][Virtual consoles]]
 *** [[file:chapters/manage_service.org][Managing services]]
 *** [[file:chapters/list_hardware_info.org][List harware info]]
-*** [[file:chapters/power_saving_control.org][Power saving control]]
+*** [[file:chapters/power_saving_control.org][Suspend and power saving control]]
 *** [[file:chapters/about_cleaning_cache.org][About cleaning cache]]
 ** [[file:chapters/bootloader.org][Bootloader]]
 ** Software installation
