--- a/README.org
+++ b/README.org
@@ -54,6 +54,7 @@
 ** Development
 *** [[file:chapters/c-cpp.org][C/C++]]
 *** [[file:chapters/hare.org][Hare]]
+*** [[file:chapters/odin.org][Odin]]
 *** [[file:chapters/socket-communication.org][Socket (inter-process) communication]]
 ** How to
 *** [[file:chapters/how-to-show-cpu-info.org][How to show CPU info]]
