--- a/README.org
+++ b/README.org
@@ -44,6 +44,7 @@
 *** [[file:chapters/lf.org][Lf]]
 *** [[file:chapters/discord.org][Discord]]
 *** [[file:chapters/brightness-control.org][Brightness control]]
+*** [[file:chapters/nginx.org][Nginx]]
 *** [[file:chapters/podman.org][Podman]]
 *** [[file:chapters/bhyve.org][Bhyve virtualization]]
 **** [[file:chapters/install-arch-linux-guest.org][Install Arch linux guest]]
