--- a/README.org
+++ b/README.org
@@ -47,6 +47,7 @@
 *** [[file:chapters/nginx.org][Nginx]]
 *** [[file:chapters/podman.org][Podman]]
 *** [[file:chapters/bhyve.org][Bhyve virtualization]]
+**** [[file:chapters/install-alpine-guest.org][Install Alpine linux guest]]
 **** [[file:chapters/install-arch-linux-guest.org][Install Arch linux guest]]
 **** [[file:chapters/install-openbsd-guest.org][Install OpenBSD guest]]
 **** [[file:chapters/it-company-network-topo-simulation.org][IT company network topology simulation]]
