[ master ] - Updated 'How to fixe a failed boot'.

--- a/README.org
+++ b/README.org
@@ -62,5 +62,6 @@
 *** [[file:chapters/socket-communication.org][Socket (inter-process) communication]]
 ** How to
 *** [[file:chapters/how-to-show-cpu-info.org][How to show CPU info]]
-*** [[file:chapters/how-to-fix-broken-rc-config.org][How to fix broken /etc/rc.conf]]
+*** [[file:chapters/how-to-fix-broken-rc-config.org][How to fix a failed boot]]
 *** [[file:chapters/how-to-use-gpart.org][How to use gpart to partition disk]]
+*** How to fix
